--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<section class="vh-100 gradient-customt">
+<section class="vh-100 gradient-custom">
   <router-outlet>
-    
+
   </router-outlet>
 </section>
